--- a/reservas.html
+++ b/reservas.html
@@ -105,7 +105,7 @@
 	<header>
 		<nav class="menu">
 			<ul>
-				<li class="column" style="list-style:none;"><a class="active" href="Practica2.html">Inicio</a></li>
+				<li class="column" style="list-style:none;"><a class="active" href="index.html">Inicio</a></li>
 				<li class="column" style="list-style:none;"><a href="carta.html">Carta</a></li>
 				<li class="column" style="list-style:none;"><a href="reservas.html">Reservar</a></li>
 				<li class="column" style="list-style:none;"><a href="contacto.html">Contacto</a></li>
