--- a/index.html
+++ b/index.html
@@ -3,25 +3,10 @@
 <head>
 	<title>Mozzafiato</title>
 	<link rel="icon" href="https://4.bp.blogspot.com/--a6B9H_pIxI/Wfj8iJPK6JI/AAAAAAAAXng/-wsvI4jZnGoxPOwCWxUQL1xWi5G9OEEsACLcBGAs/s1600/Moscow-metro-logo.svg.png"/>
+	<link href="Practica2.css" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<meta charset="utf-8">
-	<style>
-	html{font-family:Monaco; color: white; background-color: black;}
-	
-	.menu {text-align:center;padding:20px; position:fixed; overflow:hidden; top:0; width:100%;background-color: black;}
-	.menu a{ text-decoration:none; color:white; font-size:50px;padding:9px 50px; float:left; display:block; text-align:center;}
-	.menu a:hover{ background-color:white;color:black; font-size:60px; padding:9px 50px;}
-	.menu a:active{border-bottom:2px solid;}
-	
-	.main{background-image: url('https://d4t7t8y8xqo0t.cloudfront.net/resized/750X436/eazytrendz%2F2765%2Ftrend20200320082524.jpg'); background-repeat:no-repeat; background-size:100% 100%; margin-top:160px; padding:200px; color:white;}
-	
-	.subtitle {background-color:black; color:white; padding:50px;}
-
-	td{ padding: 100px; width:50%;}
-	td a{text-decoration:none; color:white; font-size:30px;text-align:center;}
-	td a:hover{border-bottom:2px solid;}
-	
-	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
 
@@ -70,6 +55,12 @@
 			</tr>
 		<tbody>
 	</table>
+	
+	<footer class="footer text-center py-3 bg-black" style="background-color:black;">
+		<div class="container" >
+			<p class="mb-1" style="color:white;">© 2017-2021 El Chubasquero</p>
+		</div>
+	</footer>
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
