--- a/reservas.html
+++ b/reservas.html
@@ -4,21 +4,10 @@
 	<title>Mozzafiato</title>
 	<link rel="icon" href="https://4.bp.blogspot.com/--a6B9H_pIxI/Wfj8iJPK6JI/AAAAAAAAXng/-wsvI4jZnGoxPOwCWxUQL1xWi5G9OEEsACLcBGAs/s1600/Moscow-metro-logo.svg.png"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<link href="Practica2.css" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<style>
-	html{font-family:Monaco; color: white; background-color: black;}	
-	.menu {text-align:center;padding:20px; position:fixed; overflow:hidden; top:0; width:100%;background-color:black;}
-	.menu a{ text-decoration:none; color:white; font-size:50px;padding:9px 50px; float:left; display:block; text-align:center;}
-	.menu a:hover{ background-color:white;color:black; font-size:60px; padding:9px 50px;}
-	.menu a:active{border-bottom:2px solid;}
 	
-	.chef{position: absolute; right:-0px; height:100%; top:125px;  }
-	
-	.formulario{position:absolute;margin-top:160px;margin-left:50px; text-align:center; width:600px; color:white;}
-	
-	#alerta {display:none; position:absolute; margin-top:250px; margin-left:400px;}
-	</style>
 	<script>
 	function mostrar() {
     var x = document.getElementById('alerta');
