--- a/contacto.html
+++ b/contacto.html
@@ -4,23 +4,14 @@
 	<title>Mozzafiato</title>
 	<link rel="icon" href="https://4.bp.blogspot.com/--a6B9H_pIxI/Wfj8iJPK6JI/AAAAAAAAXng/-wsvI4jZnGoxPOwCWxUQL1xWi5G9OEEsACLcBGAs/s1600/Moscow-metro-logo.svg.png"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+		<link href="Practica2.css" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<style>
-	html{font-family:Monaco; color: white; background-color: black;}	
-	.menu {text-align:center;padding:20px; position:fixed; overflow:hidden; top:0; width:100%;background-color:black;}
-	.menu a{ text-decoration:none; color:white; font-size:50px;padding:9px 50px; float:left; display:block; text-align:center;}
-	.menu a:hover{ background-color:white;color:black; font-size:60px; padding:9px 50px;}
-	.menu a:active{border-bottom:2px solid;}
-	
-	.chef{position: absolute; right:-0px; height:100%; }
-	
-	.contacto { position:absolute; margin-top:150px; margin-left:320px;color:white; }
-	</style>
+
 	
 </head>
 
-<body>
+<body class="d-flex flex-column h-100">
 	<div class="contacto">
 		<h1 class="display-6">Puedes o bien dejarnos comentarios...</h1>
 		<div class="mb-3">
@@ -28,22 +19,24 @@
 			<input type="email" class="form-control" style="background-color:black; color:white;" id="exampleFormControlInput1" placeholder="name@example.com">
 		</div>
 			<div class="mb-3">
-			<label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+			<label for="exampleFormControlTextarea1" class="form-label">Comentario</label>
 			<textarea class="form-control" style="background-color:black;color:white;" id="exampleFormControlTextarea1" rows="3"></textarea>
 		</div>
 		<button type="submit" class="btn btn-secondary">Enviar</button>
 		<h1 class="display-6" style="text-align:right;">... o bien llamarnos al</h1>
-		<h1 class="display-2" style="color:red;">91 650 23 23</h1>
+		<h1 class="display-2" style="color:#dc3545;">91 650 23 23</h1>
 		<p class="lead" style="text-align:center;">¡Estaremos encantados de atenderte!</p>
 	</div>
 	<header>
 		<nav class="menu">
+			<div class="container-fluid">
 			<ul>
 				<li class="column" style="list-style:none;"><a class="active" href="index.html">Inicio</a></li>
 				<li class="column" style="list-style:none;"><a href="carta.html">Carta</a></li>
 				<li class="column" style="list-style:none;"><a href="reservas.html">Reservar</a></li>
 				<li class="column" style="list-style:none;"><a href="contacto.html">Contacto</a></li>
 			</ul>
+			</div>
 		</nav> 
 	</header>
 
